@@ -316,6 +316,8 @@ Commands:
 Editor:
 - |prompt-buffer| supports multiline input/paste, undo/redo, and o/O normal
   commands.
+- |i_CTRL-R| inserts named registers (A-Z,a-z,0-9) literaly like paste instead of
+  as keypress.
 
 Events (autocommands):
 - Fixed inconsistent behavior in execution of nested autocommands #23368
